workspace/CS3100Compiler/src/compiler/Compiler.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.17+ wizard for JavaCC 1.5.0+
 */
options
{
  // If you are using a different version of Java, change this.
  JDK_VERSION = "1.8";
  static = false;
}

/**
 * This defines the main class that is generated by the parser generator.  We've
 * added a main method to the code that will be generated.
**/
PARSER_BEGIN(Compiler)
package compiler;
import java.util.HashMap;

public class Compiler
{
  // Maps programming language variables to DC registers
  private HashMap < String, Character > variables =
        new HashMap < String, Character > ();

  // Maps programming language variables to types.
  private HashMap<String, String > types =
        new HashMap<String, String >();

  // If the type is not "int", throws a TypeException
  public void checkInt (String type)
  {
    if (!(type.equals("int")))
    {
      throw new TypeException("Expected int, received " + type);
    }
  }

  public void checkBool (String type)
  {
    if (!(type.equals("boolean")))
    {
      throw new TypeException("Expected boolean, received " + type);
    }
  }
  
  public static void main(String args [])
  {
    Compiler compiler = new Compiler(System.in);
    try
    {
      compiler.program();
    }
    catch (TypeException e)
    {
      System.err.println(e.getMessage());
    }
    catch (ParseException e)
    {
      System.err.println("Parse error: " + e.getMessage());
    }
    catch (TokenMgrError e)
    {
      System.err.println(e.getMessage());
    }
    catch (RuntimeException e)
    {
      System.err.println(e.getMessage());
    }
  }
}

/**
 * Exception used to report type-checking errors.
 */
 class TypeException extends RuntimeException
 {
   public TypeException (String message)
   {
     super(message);
   }
 }

PARSER_END(Compiler)

/************************ Regular expressions that define tokens ***********************/
SKIP : /* Whitespace to be ignored */
{
  " "
| "\r"
| "\t"
| "\n"
}

TOKEN : /* Operators */
{
  < EQUALS : "=" >
| < PLUS : "+" >
| < MINUS : "-" >
| < MULTIPLY : "*" >
| < DIVIDE : "/" >
}

TOKEN : /* Keywords and punctuation */
{
  < INTTYPE : "int" >
| < STRINGTYPE : "string" >
| < PRINT : "print" >
| < SEMI: ";" >
| < LPAREN: "(" >
| < RPAREN: ")" >
}

TOKEN : /* New tokens */
{
  < NEWLINE : "newline" >
| < READ : "read" >
| < BOOLEANTYPE: "boolean" >
| < TRUE: "true" >
| < FALSE: "false" >
| < GREATER: ">" >
| < FEWER: "<" >
| < NOT: "!" >
| < IF: "if" >
| < ELSE: "else" >
| < RBRACE: "{" >
| < LBRACE: "}" >
}

TOKEN : /* Constants, variables, strings */
{
  < CONSTANT : (< DIGIT >)+ >
| < #DIGIT : [ "0"-"9" ] >
| < VAR : (< LETTER >)+ >
| < #LETTER : [ "a"-"z" ] | [ "A"-"Z" ] >
| < STRING: "\"" (~["\"", "[", "]"])* "\"" >
}

/***************************** Productions that define grammar *******************/
void program() :
{
}
{
  ( statement() )* < EOF >
}

void statement() :
{
  Token t;
  Token vtype;
  String etype;
}
{
    t = < VAR > < EQUALS > etype = equals() < SEMI >
    {
      if (types.get(t.image) == null)
      {
          throw new TypeException("Undeclared variable: " + t.image);
      }
      if (!types.get(t.image).equals(etype))
	  {
		  throw new TypeException("Type mismatch");
      }		
      char reg = variables.get(t.image);
      System.out.print("s" + reg + " ");
    }
|
    ( vtype = < INTTYPE > | vtype = < STRINGTYPE > | vtype = <  BOOLEANTYPE > ) t = < VAR > < EQUALS > etype = equals() < SEMI >
    {
      if (types.get(t.image) == null)
      {
        if (variables.size() >= 26)
        {
          throw new TypeException("Too many variables; limit is 26");
        }
        variables.put(t.image, (char) ('A' + variables.size()));
		types.put(t.image, vtype.image);

		if (!vtype.image.equals(etype))
		{
		  throw new TypeException("Type mismatch");
		}
		
		char reg2 = variables.get(t.image);
        System.out.print("s" + reg2 + " ");
      }
      else
      {
        throw new TypeException("Variable already declared: " + t.image);
      }
    }
|   
    < PRINT > etype = exp() < SEMI >
    {
      if(etype.equals("boolean")) {
        System.out.print("[true] r 0 [sa [false]] sa =a n");
      } else {
        System.out.print("n ");
      } 
    }
|
	< NEWLINE > < SEMI >
	{
	  System.out.print("[] p");	  
	}
|
	< READ > t = < VAR > < SEMI >
	{
	  if (types.get(t.image) == null)
      {
          throw new TypeException("Undeclared variable: " + t.image);
      }
      checkInt(types.get(t.image));
      char reg2 = variables.get(t.image); 
      System.out.print("? s" + reg2 + " ");
	}
|
	< IF > etype = equals() < RBRACE > getStatement('a') < LBRACE > < ELSE > < RBRACE > getStatement('b') < LBRACE >
	{
	  checkBool(etype);
      System.out.print("la r 0 [sc [lb]] sc =c x");
	}
}

void getStatement(char x):
{
}
{
  {
    System.out.print("[");
  }
  (    statement()
  )*
  {
    System.out.print("] s" + x);
  }
}

String equals() :
{
  Token t;
  String type1, type2;
}
{
  type1 = compare()
  (
    ( t = < EQUALS > < EQUALS > ) type2 = compare()
    {
      System.out.print("sa 0 r la [sa 1] sa =a ");
      if(type1.equals("boolean")) {
        checkBool(type2);
      }
      else { 
	  	checkInt(type1);
	  	checkInt(type2);
	  	type1 = "boolean";
	  }
    }
  )*
  {
    return type1;
  }
} 

String compare() :
{
  Token t;
  String type1, type2;
}
{
  type1 = exp()
  (
    ( t = < GREATER > | t = < FEWER > ) type2 = exp()
    {
      System.out.print("r sa 0 r la [sa 1] sa " + t.image + "a "); 
	  checkInt(type1);
	  checkInt(type2);
	  type1 = "boolean";
    }
  )*
  {
    return type1;
  }
} 

String exp() :
{
  Token t;
  String type1, type2;
}
{
  type1 = term()
  (
    ( t = < PLUS > | t = < MINUS > ) type2 = term()
    {
      System.out.print(t.image + " ");
      checkInt(type1);
	  checkInt(type2);
    }
  )*
  {
    return type1;
  }
}

String term() :
{
  Token t;
  String type1, type2;
}
{
  type1 = factor()
  (
    ( t = < MULTIPLY > | t = < DIVIDE > )
    type2 = factor()
    {
      System.out.print(t.image + " ");
      checkInt(type1);
      checkInt(type2);
    }
  )*
  {
    return type1;
  }
}

String factor() :
{
  String type;
}
{
  < MINUS > type = element()
  {
    checkInt(type);
    System.out.print("_1 * ");
    return "int";
  }
|
  < NOT > type = element()
  {
    checkBool(type);
    System.out.print("1 - sa la la * ");
    return "boolean";
  }
|
  type = element()
  {
	return type;
  }
}

String element() :
{
  Token t;
  String type;
}
{
  t = < CONSTANT >
  {
    System.out.print(t.image + " ");
    return "int";
  }
|
  t = < STRING >
  {
    String dcs = t.image.replaceFirst("\"", "[");
    dcs = dcs.replaceFirst("\"", "]");
	System.out.print(dcs + " ");
	return "string";
  }
|  
  t = < VAR >
  {
    if (types.get(t.image) == null)
    {
		throw new TypeException("Undefined variable " + t.image);
    }
    Character reg = variables.get(t.image);
    System.out.print("l" + reg + " ");
    return types.get(t.image);
  }
|
  < LPAREN > type = equals() < RPAREN >
  {
	return type;
  }
|
  (t = < TRUE > | t = < FALSE >) 
  {
    if(t.image == "true") {
      System.out.print("1 ");
    } else if(t.image == "false"){
      System.out.print("0 ");
    }
	return "boolean";
  }
}
